src/main/java/org/terasology/grammar/parser/PAGParser.java
// Generated from src/main/antlr/org/terasology/grammar/PAG.g4 by ANTLR 4.0
package org.terasology.grammar.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PAGParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__46=1, T__45=2, T__44=3, T__43=4, T__42=5, T__41=6, T__40=7, T__39=8, 
		T__38=9, T__37=10, T__36=11, T__35=12, T__34=13, T__33=14, T__32=15, T__31=16, 
		T__30=17, T__29=18, T__28=19, T__27=20, T__26=21, T__25=22, T__24=23, 
		T__23=24, T__22=25, T__21=26, T__20=27, T__19=28, T__18=29, T__17=30, 
		T__16=31, T__15=32, T__14=33, T__13=34, T__12=35, T__11=36, T__10=37, 
		T__9=38, T__8=39, T__7=40, T__6=41, T__5=42, T__4=43, T__3=44, T__2=45, 
		T__1=46, T__0=47, BOOLEAN_LITERAL=48, NUMBER=49, STRING=50, ID=51, LINE_COMMENT=52, 
		COMMENT=53, WS=54;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'Snap'", "'Random'", "','", "'['", "'occ'", "'-'", 
		"'*'", "':'", "'('", "'<'", "'!='", "'Rx'", "'<='", "'Divide'", "'Rz'", 
		"'I'", "'{'", "'Repeat'", "'}'", "'S'", "'Shape'", "'Set'", "'->'", "'%'", 
		"')'", "'.'", "'Priority'", "'+'", "'visible'", "'r'", "'grammar'", "';'", 
		"'Scope'", "'&&'", "'||'", "'Ry'", "'>'", "':='", "'/'", "'=='", "'#'", 
		"'>='", "'Split'", "'T'", "'!'", "'..'", "BOOLEAN_LITERAL", "NUMBER", 
		"STRING", "ID", "LINE_COMMENT", "COMMENT", "WS"
	};
	public static final int
		RULE_pag = 0, RULE_header = 1, RULE_declaration = 2, RULE_section = 3, 
		RULE_ruleStatement = 4, RULE_predecessor = 5, RULE_successor = 6, RULE_baseRule = 7, 
		RULE_setRule = 8, RULE_divideRule = 9, RULE_splitRule = 10, RULE_repeatRule = 11, 
		RULE_snapRule = 12, RULE_instantiationRule = 13, RULE_transformationRule = 14, 
		RULE_scaleRule = 15, RULE_translateRule = 16, RULE_rotateRule = 17, RULE_exprList = 18, 
		RULE_rangeExpr = 19, RULE_expr = 20, RULE_functionCall = 21, RULE_randomSelection = 22, 
		RULE_primary = 23, RULE_literal = 24;
	public static final String[] ruleNames = {
		"pag", "header", "declaration", "section", "ruleStatement", "predecessor", 
		"successor", "baseRule", "setRule", "divideRule", "splitRule", "repeatRule", 
		"snapRule", "instantiationRule", "transformationRule", "scaleRule", "translateRule", 
		"rotateRule", "exprList", "rangeExpr", "expr", "functionCall", "randomSelection", 
		"primary", "literal"
	};

	@Override
	public String getGrammarFileName() { return "PAG.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public PAGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PagContext extends ParserRuleContext {
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public TerminalNode ID() { return getToken(PAGParser.ID, 0); }
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public PagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterPag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitPag(this);
		}
	}

	public final PagContext pag() throws RecognitionException {
		PagContext _localctx = new PagContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); header();
			setState(51); match(32);
			setState(52); match(ID);
			setState(53); match(9);
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54); section();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==28 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==42 || _la==ID) {
				{
				{
				setState(59); declaration();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PAGParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if (_la==42) {
				{
				setState(65); match(42);
				}
			}

			setState(68); match(ID);
			setState(69); match(39);
			setState(70); expr(0);
			setState(71); match(33);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public List<RuleStatementContext> ruleStatement() {
			return getRuleContexts(RuleStatementContext.class);
		}
		public RuleStatementContext ruleStatement(int i) {
			return getRuleContext(RuleStatementContext.class,i);
		}
		public TerminalNode NUMBER() { return getToken(PAGParser.NUMBER, 0); }
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitSection(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); match(28);
			setState(74); match(NUMBER);
			setState(75); match(9);
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76); ruleStatement();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleStatementContext extends ParserRuleContext {
		public PredecessorContext predecessor() {
			return getRuleContext(PredecessorContext.class,0);
		}
		public List<SuccessorContext> successor() {
			return getRuleContexts(SuccessorContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public SuccessorContext successor(int i) {
			return getRuleContext(SuccessorContext.class,i);
		}
		public RuleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterRuleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitRuleStatement(this);
		}
	}

	public final RuleStatementContext ruleStatement() throws RecognitionException {
		RuleStatementContext _localctx = new RuleStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ruleStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); predecessor();
			setState(84);
			_la = _input.LA(1);
			if (_la==9) {
				{
				setState(82); match(9);
				setState(83); expr(0);
				}
			}

			setState(86); match(24);
			setState(87); successor();
			setState(90);
			_la = _input.LA(1);
			if (_la==9) {
				{
				setState(88); match(9);
				setState(89); expr(0);
				}
			}

			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==24) {
				{
				{
				setState(92); match(24);
				setState(93); successor();
				setState(96);
				_la = _input.LA(1);
				if (_la==9) {
					{
					setState(94); match(9);
					setState(95); expr(0);
					}
				}

				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103); match(33);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredecessorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PAGParser.ID, 0); }
		public PredecessorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predecessor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterPredecessor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitPredecessor(this);
		}
	}

	public final PredecessorContext predecessor() throws RecognitionException {
		PredecessorContext _localctx = new PredecessorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_predecessor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SuccessorContext extends ParserRuleContext {
		public BaseRuleContext baseRule(int i) {
			return getRuleContext(BaseRuleContext.class,i);
		}
		public TerminalNode ID(int i) {
			return getToken(PAGParser.ID, i);
		}
		public List<TerminalNode> ID() { return getTokens(PAGParser.ID); }
		public List<BaseRuleContext> baseRule() {
			return getRuleContexts(BaseRuleContext.class);
		}
		public SuccessorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_successor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterSuccessor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitSuccessor(this);
		}
	}

	public final SuccessorContext successor() throws RecognitionException {
		SuccessorContext _localctx = new SuccessorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_successor);
		int _la;
		try {
			setState(118);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(107); match(ID);
				}
				break;
			case 2:
			case 13:
			case 15:
			case 16:
			case 17:
			case 19:
			case 21:
			case 23:
			case 37:
			case 44:
			case 45:
				enterOuterAlt(_localctx, 2);
				{
				setState(108); baseRule();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 3);
				{
				setState(109); match(18);
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 13) | (1L << 15) | (1L << 16) | (1L << 17) | (1L << 19) | (1L << 21) | (1L << 23) | (1L << 37) | (1L << 44) | (1L << 45) | (1L << ID))) != 0)) {
					{
					setState(112);
					switch (_input.LA(1)) {
					case ID:
						{
						setState(110); match(ID);
						}
						break;
					case 2:
					case 13:
					case 15:
					case 16:
					case 17:
					case 19:
					case 21:
					case 23:
					case 37:
					case 44:
					case 45:
						{
						setState(111); baseRule();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117); match(20);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseRuleContext extends ParserRuleContext {
		public DivideRuleContext divideRule() {
			return getRuleContext(DivideRuleContext.class,0);
		}
		public SetRuleContext setRule() {
			return getRuleContext(SetRuleContext.class,0);
		}
		public InstantiationRuleContext instantiationRule() {
			return getRuleContext(InstantiationRuleContext.class,0);
		}
		public SplitRuleContext splitRule() {
			return getRuleContext(SplitRuleContext.class,0);
		}
		public TransformationRuleContext transformationRule() {
			return getRuleContext(TransformationRuleContext.class,0);
		}
		public SnapRuleContext snapRule() {
			return getRuleContext(SnapRuleContext.class,0);
		}
		public RepeatRuleContext repeatRule() {
			return getRuleContext(RepeatRuleContext.class,0);
		}
		public BaseRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterBaseRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitBaseRule(this);
		}
	}

	public final BaseRuleContext baseRule() throws RecognitionException {
		BaseRuleContext _localctx = new BaseRuleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_baseRule);
		try {
			setState(127);
			switch (_input.LA(1)) {
			case 23:
				enterOuterAlt(_localctx, 1);
				{
				setState(120); setRule();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 2);
				{
				setState(121); divideRule();
				}
				break;
			case 44:
				enterOuterAlt(_localctx, 3);
				{
				setState(122); splitRule();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 4);
				{
				setState(123); repeatRule();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 5);
				{
				setState(124); snapRule();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 6);
				{
				setState(125); instantiationRule();
				}
				break;
			case 13:
			case 16:
			case 21:
			case 37:
			case 45:
				enterOuterAlt(_localctx, 7);
				{
				setState(126); transformationRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetRuleContext extends ParserRuleContext {
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public SetRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterSetRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitSetRule(this);
		}
	}

	public final SetRuleContext setRule() throws RecognitionException {
		SetRuleContext _localctx = new SetRuleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_setRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(23);
			setState(130); match(10);
			setState(131); expr(0);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==9) {
				{
				{
				setState(132); match(9);
				setState(133); expr(0);
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139); match(26);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DivideRuleContext extends ParserRuleContext {
		public List<SuccessorContext> successor() {
			return getRuleContexts(SuccessorContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SuccessorContext successor(int i) {
			return getRuleContext(SuccessorContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public DivideRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_divideRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterDivideRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitDivideRule(this);
		}
	}

	public final DivideRuleContext divideRule() throws RecognitionException {
		DivideRuleContext _localctx = new DivideRuleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_divideRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); match(15);
			setState(142); expr(0);
			setState(143); match(18);
			setState(152); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(144); match(5);
				setState(145); expr(0);
				setState(147);
				_la = _input.LA(1);
				if (_la==31) {
					{
					setState(146); match(31);
					}
				}

				setState(149); match(1);
				setState(150); successor();
				}
				}
				setState(154); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==5 );
			setState(156); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SplitRuleContext extends ParserRuleContext {
		public List<SuccessorContext> successor() {
			return getRuleContexts(SuccessorContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SuccessorContext successor(int i) {
			return getRuleContext(SuccessorContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public SplitRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_splitRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterSplitRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitSplitRule(this);
		}
	}

	public final SplitRuleContext splitRule() throws RecognitionException {
		SplitRuleContext _localctx = new SplitRuleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_splitRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158); match(44);
			setState(159); match(18);
			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(160); match(5);
				setState(161); expr(0);
				setState(162); match(1);
				setState(163); successor();
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==5 );
			setState(169); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatRuleContext extends ParserRuleContext {
		public SuccessorContext successor() {
			return getRuleContext(SuccessorContext.class,0);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public RepeatRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterRepeatRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitRepeatRule(this);
		}
	}

	public final RepeatRuleContext repeatRule() throws RecognitionException {
		RepeatRuleContext _localctx = new RepeatRuleContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_repeatRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171); match(19);
			setState(172); expr(0);
			setState(173); match(5);
			setState(174); expr(0);
			setState(175); match(1);
			setState(176); successor();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SnapRuleContext extends ParserRuleContext {
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public SnapRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_snapRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterSnapRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitSnapRule(this);
		}
	}

	public final SnapRuleContext snapRule() throws RecognitionException {
		SnapRuleContext _localctx = new SnapRuleContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_snapRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178); match(2);
			setState(179); match(10);
			setState(180); expr(0);
			setState(183);
			_la = _input.LA(1);
			if (_la==4) {
				{
				setState(181); match(4);
				setState(182); expr(0);
				}
			}

			setState(185); match(26);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstantiationRuleContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InstantiationRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instantiationRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterInstantiationRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitInstantiationRule(this);
		}
	}

	public final InstantiationRuleContext instantiationRule() throws RecognitionException {
		InstantiationRuleContext _localctx = new InstantiationRuleContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_instantiationRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187); match(17);
			setState(188); match(10);
			setState(189); expr(0);
			setState(190); match(26);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransformationRuleContext extends ParserRuleContext {
		public TranslateRuleContext translateRule() {
			return getRuleContext(TranslateRuleContext.class,0);
		}
		public RotateRuleContext rotateRule() {
			return getRuleContext(RotateRuleContext.class,0);
		}
		public ScaleRuleContext scaleRule() {
			return getRuleContext(ScaleRuleContext.class,0);
		}
		public TransformationRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transformationRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterTransformationRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitTransformationRule(this);
		}
	}

	public final TransformationRuleContext transformationRule() throws RecognitionException {
		TransformationRuleContext _localctx = new TransformationRuleContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_transformationRule);
		try {
			setState(195);
			switch (_input.LA(1)) {
			case 21:
				enterOuterAlt(_localctx, 1);
				{
				setState(192); scaleRule();
				}
				break;
			case 45:
				enterOuterAlt(_localctx, 2);
				{
				setState(193); translateRule();
				}
				break;
			case 13:
			case 16:
			case 37:
				enterOuterAlt(_localctx, 3);
				{
				setState(194); rotateRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScaleRuleContext extends ParserRuleContext {
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ScaleRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scaleRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).enterScaleRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGListener ) ((PAGListener)listener).exitScaleRule(this);
		}
	}

	public final ScaleRuleContext scaleRule() throws RecognitionException {
		ScaleRuleContext _localctx = new ScaleRuleContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_scaleRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197); match(21);
			setState(198); match(10);
			setState(199); expr(0);
			setState(205);
			_la = _input.LA(1);
			if (_la==4) {
				{
				setState(200); match(4);
				setState(201); expr(0);
				setState(202); match(4);
				setState(203); expr(0);
				}
			}
